--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A blog api exercise",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha ./test",
     "start": "node server.js"
   },
   "author": "Roy Baron",
